--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a class="nav__logo" href="./index.html">WebStudio</a>
+            <a class="nav__logo" href="./index.html">
+                Web<span>Studio</span>
+            </a>
             <ul class="nav__list">
+                <li class="nav__item"><a class="nav__link" href="./index.html">Home</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Studio</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Portfolio</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
