--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </a>
             <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="./index.html">Home</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Studio</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Portfolio</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
+                <li class="nav__item"><a class="nav__link" href="">Studio</a></li>
+                <li class="nav__item"><a class="nav__link" href="">Portfolio</a></li>
+                <li class="nav__item"><a class="nav__link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="contact">
