--- a/index.html
+++ b/index.html
@@ -94,6 +94,50 @@
                 </li>
             </ul>
         </section>
+        <section class="portfolio">
+            <h2 class="portfolio__title">Our Portfolio</h2>
+            <ul class="portfolio__list">
+                <li class="portfolio__item">
+                    <img class="portfolio__photo" src="./images/bankingapp.jpg" alt="banking app photo" width="360"
+                        height="300" />
+                    <h3 class="portfolio__name">Banking App</h3>
+                    <p class="portfolio__role">App</p>
+                </li>
+                <li class="portfolio__item">
+                    <img class="portfolio__photo" src="./images/cashlesspayment.jpg" alt="cashless payment photo"
+                        width="360" height="300" />
+                    <h3 class="portfolio__name">Cashless Payment</h3>
+                    <p class="portfolio__role">Marketing</p>
+                </li>
+                <li class="portfolio__item">
+                    <img class="portfolio__photo" src="./images/meditationapp.jpg" alt="meditation app photo"
+                        width="360" height="300" />
+                    <h3 class="portfolio__name">Meditation App</h3>
+                    <p class="portfolio__role">App</p>
+                </li>
+            </ul>
+            <ul class="portfolio__list">
+                <li class="portfolio__item">
+                    <img class="portfolio__photo" src="./images/taxiservice.jpg" alt="taxi service photo" width="360"
+                        height="300" />
+                    <h3 class="portfolio__name">Taxi Service</h3>
+                    <p class="portfolio__role">Marketing</p>
+                </li>
+                <li class="portfolio__item">
+                    <img class="portfolio__photo" src="./images/screenillustrations.jpg" alt="screenillustrations photo"
+                        width="360" height="300" />
+                    <h3 class="portfolio__name">Screen Illustrations</h3>
+                    <p class="portfolio__role">Design</p>
+                </li>
+                <li class="portfolio__item">
+                    <img class="portfolio__photo" src="./images/onlinecourses.jpg" alt="online courses photo"
+                        width="360" height="300" />
+                    <h3 class="portfolio__name">Online Courses</h3>
+                    <p class="portfolio__role">Marketing</p>
+
+                </li>
+            </ul>
+        </section>
     </main>
     <footer class="footer">
         <a class="footer__logo" href="./index.html">WebStudio</a>
