--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <button class="hero__button" type="button">Order Service</button>
         </section>
         <section class="benefits">
-            <h2 hidden>Benefits</h2>
+            <h2 hiden>Benefits</h2>
             <ul class="benefits__list">
                 <li class="benefits__item">
                     <h3 class="benefits__subtitle">Strategy</h3>
