--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="footer__logo" href="./index.html">Web<span>Studio</span></a>
+        <a class="footer__logo" href="./index.html">Web<span class="footer__logo">Studio</span></a>
         <p class="footer__text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
