--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header class="header">
+        <div class="header__container">
         <nav class="nav">
             <a class="nav__logo" href="./index.html">
                 Web<span>Studio</span>
@@ -28,19 +30,23 @@
         </nav>
         <address class="contact">
             <ul class="contact__list">
-                <li class="contact__item"><a class="contact__link"
+                <li><a class="contact__mail"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contact__item"><a class="contact__link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="contact__tel" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
 
     <main>
         <section class="hero">
+            <div class="hero__container">
             <h1 class="hero__title">Effective Solutions for Your Business</h1>
             <button class="hero__button" type="button">Order Service</button>
+            </div>
         </section>
         <section class="benefits">
+            <div class="container">
             <h2 hidden>Benefits</h2>
             <ul class="benefits__list">
                 <li class="benefits__item">
@@ -64,76 +70,100 @@
                         passion for problem-solving.</p>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="team">
+            <div class="container">
             <h2 class="team__title">Our Team</h2>
             <ul class="team__list">
                 <li class="team__item">
                     <img class="team__photo" src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264"
                         height="260" />
+                        <div class="text__container">
                     <h3 class="team__name">Mark Guerrero</h3>
                     <p class="team__role">Product Designer</p>
+                        </div>
                 </li>
                 <li class="team__item">
                     <img class="team__photo" src="./images/tomford.jpg" alt="Tom Ford" width="264" height="260" />
+                    <div class="text__container">
                     <h3 class="team__name">Tom Ford</h3>
                     <p class="team__role">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team__item">
                     <img class="team__photo" src="./images/camilagarcia.jpg" alt="Camila Garcia" width="264"
                         height="260" />
+                        <div class="text__container">
                     <h3 class="team__name">Camila Garcia</h3>
                     <p class="team__role">Marketing</p>
+                    </div>
                 </li>
                 <li class="team__item">
                     <img class="team__photo" src="./images/danielwilson.jpg" alt="Daniel Wilson" width="264"
                         height="260" />
+                        <div class="text__container">
                     <h3 class="team__name">Daniel Wilson</h3>
                     <p class="team__role">UI Designer</p>
+                    </div>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="portfolio">
+            <div class="cintainer">
             <h2 class="portfolio__title">Our Portfolio</h2>
             <ul class="portfolio__list">
                 <li class="portfolio__item">
                     <img class="portfolio__photo" src="./images/bankingapp.jpg" alt="banking app photo" width="360"
                         height="300" />
+                        <div class="portfolio__text">
                     <h3 class="portfolio__name">Banking App</h3>
                     <p class="portfolio__role">App</p>
+                    </div>
                 </li>
                 <li class="portfolio__item">
                     <img class="portfolio__photo" src="./images/cashlesspayment.jpg" alt="cashless payment photo"
                         width="360" height="300" />
+                        <div class="portfolio__text">
                     <h3 class="portfolio__name">Cashless Payment</h3>
                     <p class="portfolio__role">Marketing</p>
+                    </div>
                 </li>
                 <li class="portfolio__item">
                     <img class="portfolio__photo" src="./images/meditationapp.jpg" alt="meditation app photo"
                         width="360" height="300" />
+                        <div class="portfolio__text">
                     <h3 class="portfolio__name">Meditation App</h3>
                     <p class="portfolio__role">App</p>
+                    </div>
                 </li>
                 <li class="portfolio__item">
                     <img class="portfolio__photo" src="./images/taxiservice.jpg" alt="taxi service photo" width="360"
                         height="300" />
+                        <div class="portfolio__text">
                     <h3 class="portfolio__name">Taxi Service</h3>
                     <p class="portfolio__role">Marketing</p>
+                    </div>
                 </li>
                 <li class="portfolio__item">
                     <img class="portfolio__photo" src="./images/screenillustrations.jpg" alt="screenillustrations photo"
                         width="360" height="300" />
+                        <div class="portfolio__text">
                     <h3 class="portfolio__name">Screen Illustrations</h3>
                     <p class="portfolio__role">Design</p>
+                    </div>
                 </li>
                 <li class="portfolio__item">
                     <img class="portfolio__photo" src="./images/onlinecourses.jpg" alt="online courses photo"
                         width="360" height="300" />
+                        <div class="portfolio__text">
                     <h3 class="portfolio__name">Online Courses</h3>
                     <p class="portfolio__role">Marketing</p>
-
+                        </div>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
