--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section class="benefits">
             <div class="container">
-            <h2 hidden>Benefits</h2>
+            <h2 class="visually-hidden">Benefits</h2>
             <ul class="benefits__list">
                 <li class="benefits__item">
                     <h3 class="benefits__subtitle">Strategy</h3>
@@ -111,7 +111,7 @@
             </div>
         </section>
         <section class="portfolio">
-            <div class="cintainer">
+            <div class="container">
             <h2 class="portfolio__title">Our Portfolio</h2>
             <ul class="portfolio__list">
                 <li class="portfolio__item">
@@ -167,9 +167,11 @@
         </section>
     </main>
     <footer class="footer">
+        <div class="container">
         <a class="footer__logo" href="./index.html">Web<span class="footer__logo">Studio</span></a>
         <p class="footer__text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
+            </div>
     </footer>
 </body>
 
