--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header">
-        <div class="header__container">
+        <div class="header__container container">
         <nav class="nav">
             <a class="nav__logo" href="./index.html">
                 Web<span>Studio</span>
@@ -30,9 +30,9 @@
         </nav>
         <address class="contact">
             <ul class="contact__list">
-                <li><a class="contact__mail"
+                <li><a class="contact__link"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contact__tel" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="contact__link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
         </div>
@@ -40,7 +40,7 @@
 
     <main>
         <section class="hero">
-            <div class="hero__container">
+            <div class="container">
             <h1 class="hero__title">Effective Solutions for Your Business</h1>
             <button class="hero__button" type="button">Order Service</button>
             </div>
